# cacheguard

./: .gitignore  README.md  flake.nix  pyproject.toml  pytest.ini
.config/: README.md  lefthook.toml
cacheguard/: __init__.py  base_cache.py  cache.py  key_cache.py  sops.py  text_cache.py
nix/: shell.nix
tests/: test_base_cache.py  test_key_cache.py  test_sops.py  test_text_cache.py
