[project]
name = "cacheguard"
version = "0.2.3"
description = "A simple secure Python key-value store protected by Sops"
authors = [
    {name = "Michael Buckley", email = "michaelcbuckley@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sopsy>=1.1.0,<2.0.0",
    "orjson>=3.10.18,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "icecream>=2.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
